Use relative CSS path

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>A Collection of Work from HTML/CSS Basics</title>
-    <link rel="stylesheet" type="text/css"
-        href="C:\Users\elish\OneDrive\Documents\Programming\Html\Khan Stuff\styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 
 <body>
