--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <title>Home | lishaduck</title>
         <meta name="description" content="lishaduck's personal website." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="/index.css" />
     </head>
     <body>
         <!--[if lt IE 7]>
