reformat index.html
-remove unused css rule
-fix dependabot.yml
-reformat static.yml, and pin dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,24 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html lang="en-us">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Home | lishaduck</title>
-        <meta name="description" content="lishaduck's personal website." />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="/styles.css" />
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">
-                You are using an <strong>outdated</strong> browser. Please
-                <a href="https://www.microsoft.com/en-us/edge"
-                    >upgrade your browser</a
-                >
-                to improve your experience.
-            </p>
-        <![endif]-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Home | lishaduck</title>
+    <meta name="description" content="lishaduck's personal website." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
+  </head>
+  <body>
+    <!--[if lt IE 7]>
+      <p class="browsehappy">
+        You are using an <strong>outdated</strong> browser. Please
+        <a href="https://www.microsoft.com/en-us/edge">upgrade your browser</a>
+        to improve your experience.
+      </p>
+    <![endif]-->
 
-        <a href="/lishaduck">About Me</a>
-        <a href="/khan">Boring archive.</a>
-    </body>
+    <a href="/lishaduck">About Me</a>
+    <a href="/khan">Boring archive.</a>
+  </body>
 </html>
